fix light alpha fade out and render order